--- a/package.json
+++ b/package.json
@@ -35,44 +35,39 @@
   "license": "MIT",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "dotenv": "^9.0.2",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.2.0",
+    "hardhat": "^2.17.0",
+    "hardhat-abi-exporter": "^2.2.0",
+    "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-gas-reporter": "^1.0.4"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/hardhat-upgrades": "^1.8.2",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "@tenderly/hardhat-tenderly": "^1.0.12",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
+    "@types/jest": "^27.0.1",
     "@types/mocha": "^9.0.0",
     "@types/node": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "chai": "^4.2.0",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^8.0.0",
-    "eslint-config-standard": "^16.0.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-mocha-no-only": "^1.1.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "ethereum-waffle": "^3.0.2",
-    "ethers": "^5.1.3",
-    "ethlint": "^1.2.5",
-    "hardhat": "^2.6.1",
-    "hardhat-abi-exporter": "^2.2.0",
-    "hardhat-contract-sizer": "^2.6.1",
-    "hardhat-gas-reporter": "^1.0.4",
-    "prettier": "^2.1.1",
-    "prettier-plugin-solidity": "^1.0.0-alpha.56",
-    "solidity-coverage": "^0.7.10",
-    "truffle-flattener": "^1.4.4",
-    "ts-node": "^10.5.0",
+    "solidity-coverage": "^0.8.5",
+    "ts-node": "^10.9.1",
     "typechain": "^7.0.0",
-    "typescript": "^4.0.2"
-  },
-  "dependencies": {
-    "@chainlink/contracts": "^0.4.1",
-    "@openzeppelin/contracts": "^4.5.0"
+    "typescript": "^5.1.6"
   }
 }
